--- a/NewGeneration/NewGeneration.csproj
+++ b/NewGeneration/NewGeneration.csproj
@@ -132,10 +132,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\DBContext.cs" />
     <Compile Include="Models\Parent.cs" />
     <Compile Include="Models\Pupil.cs" />
     <Compile Include="Models\PupilContext.cs" />
+    <Compile Include="Models\PupilDbInitializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
